[omnibox] Reverse arrow keys for RTL with respect to tab switch button

In a RTL UI, we'd like the arrow keys to behave intuitively which means
they must be reversed from in LTR mode. Also, it makes a slight behavior
change: To handle the case of not being able to unfocus the button if
the cursor is moved away from the end, we now unfocus the button as
soon as the Omnibox is clicked (which makes sense in terms of moving
the "focus".)

Bug: 894788
Change-Id: I3323a5b2575bdbaad45853799044f21efa65ac63
Reviewed-on: https://chromium-review.googlesource.com/c/1280847
Commit-Queue: Kevin Bailey <krb@chromium.org>
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604624}
Former-commit-id: 5f2cc6d8103e545960e56f845cbfa97268d5f2b6